WICKET-6563 applied review comments